# Renderer

./: CMakeLists.txt  LICENSE
Core/: Clipper.h  Fragment.h  FragmentProcessor.cpp  FragmentProcessor.h  FrameBuffer.h  Rasterizer.cpp  Renderer.cpp  Renderer.h  Scene.h  Texture.h  Vertex.h  VertexProcessor.cpp  VertexProcessor.h  main.cpp
Fragment/: TrivialColorFP.h
Libs/: CMakeLists.txt
Libs/glfw/: CMakeLists.txt
Renderer/: CMakeLists.txt  Fragment.h  FragmentProcessor.cpp  FragmentProcessor.h  FrameBuffer.h  Rasterizer.cpp  Rasterizer.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Vertex.h  VertexProcessor.cpp  VertexProcessor.h  main.cpp  utMath.h
Renderer.xcodeproj/: project.pbxproj
Renderer/Core/: Clipper.h  Fragment.h  FragmentProcessor.h  FrameBuffer.h  Rasterizer.cpp  Rasterizer.h  RenderProgram.cpp  Renderer.cpp  Renderer.h  Scene.h  Texture.cpp  Texture.h  Vertex.h  VertexProcessor.h  main.cpp
Renderer/Scene/: SceneCollada.cpp  SceneCollada.h  SceneMesh.cpp  SceneMesh.h
Renderer/SceneNodes/: NodeLine.cpp  NodeLine.h  NodeTriangle.cpp  NodeTriangle.h  RenderableProtocol.h
Renderer/SoftwareRHI/: CMakeLists.txt
Renderer/SoftwareRHI/Core/: Clipper.h  Fragment.h  Rasterizer.cpp  Rasterizer.h  RenderCommand.h  RenderEnum.h  RenderProgram.h  Renderer.cpp  Scene.h  Texture.cpp  Texture.h  VertexProcessor.h  main.cpp
Renderer/SoftwareRHI/Fragment/: TrivialColorFP.h
Renderer/SoftwareRHI/Util/: utDefines.h  utMath.h
Renderer/Vertex/: ConstColorVP.h
Scene/: SceneMesh.cpp  SceneMesh.h
Vertex/: ConstColorVP.h
