cmake_minimum_required(VERSION 3.1)

# Project details.
project(Renderer)

SET(${PROJECT_NAME}_MAJOR_VERSION 0)
SET(${PROJECT_NAME}_MINOR_VERSION 1)
SET(${PROJECT_NAME}_PATCH_LEVEL 0)

# Set binaries output folder.
SET(RENDERER_OUTPUT_PATH_PREFIX "${PROJECT_BINARY_DIR}/Binaries")
SET(RENDERER_OUTPUT_PATH_SUFFIX "")
IF(${CMAKE_CFG_INTDIR} STREQUAL ".")
    SET(RENDERER_OUTPUT_PATH_SUFFIX ${CMAKE_BUILD_TYPE})
    IF(NOT RENDERER_OUTPUT_PATH_SUFFIX)
        SET(RENDERER_OUTPUT_PATH_SUFFIX "Release")
    ENDIF(NOT RENDERER_OUTPUT_PATH_SUFFIX)
ENDIF(${CMAKE_CFG_INTDIR} STREQUAL ".")

IF(NOT MSVC)
    set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++")
ENDIF(NOT MSVC)

# definitions
add_definitions(-DCMAKE)

add_subdirectory(Libs)
add_subdirectory(Renderer)

